--- a/nginx-reverse-proxy/nginx/nginx.conf
+++ b/nginx-reverse-proxy/nginx/nginx.conf
@@ -1,9 +1,10 @@
 
 user  nginx;
-worker_processes  1;
+worker_processes  auto;
 
-error_log  /var/log/nginx/error.log warn;
+error_log  /var/log/nginx/error.log notice;
 pid        /var/run/nginx.pid;
+
 
 events {
     worker_connections  1024;
@@ -11,7 +12,6 @@ events {
 
 
 http {
-    
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
